--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,14 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/rainbowDancer.js"></script>
+    <script src="src/movingRainbowDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingRainbowDancer">add a moving rainbow dancer</a>
     </div>
     <script src="src/init.js"></script>
   </body>
