--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,6 +15,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingRainbowDancer">add a moving rainbow dancer</a>
+      <a href="#" class="lineUpButton">line up dancers</a>
     </div>
     <script src="src/init.js"></script>
   </body>
