--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,6 +4,7 @@
   <title>Mocha Spec Runner</title>
   <link rel="stylesheet" href="lib/mocha/mocha.css">
   <script src="lib/jquery.js"></script>
+  <script src="lib/underscore.js"></script>
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
@@ -14,10 +15,7 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
-  <script src="spec/dancerSpec.js"></script>
-  <script src="spec/blinkyDancerSpec.js"></script>
-  <script src="spec/rainbowDancerSpec.js"></script>
-  <script src="spec/movingRainbowDancerSpec.js"></script>
+  <script src="spec/dancerTestSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
   <script src="src/rainbowDancer.js"></script>
