Dancers now pair up when you click "pair up dancers".

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingRainbowDancer">add a moving rainbow dancer</a>
       <a href="#" class="lineUpButton">line up dancers</a>
+      <a href="#" class="pairUpButton">pair up dancers</a>
     </div>
     <script src="src/init.js"></script>
   </body>
