--- a/dancefloor.html
+++ b/dancefloor.html
@@ -18,6 +18,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingRainbowDancer">add a moving rainbow dancer</a>
       <a href="#" class="lineUpButton">line up dancers</a>
       <a href="#" class="pairUpButton">pair up dancers</a>
+      <a href="#" class="spreadOutButton">spread out dancers</a>
     </div>
     <script src="src/init.js"></script>
   </body>
